# www.archive.openshaiya.org

./: Cargo.toml  LICENSE  README.md  build_clientbuilder.sh  flyway.conf
db/: V1_0__Init.sql  V1_1__CreateFileFunctions.sql
scripts/: populate_database_from_archive.py
tools/clientbuilder/: Cargo.toml  gsconfig.template.cfg  version.template.ini
tools/clientbuilder/queries/: files_for_dist.sql  normalize_patch.sql
tools/clientbuilder/src/: lib.rs
tools/patchdownload/: Cargo.toml  README.md
tools/patchdownload/src/: main.rs
tools/patchinflate/: Cargo.toml  README.md
tools/patchinflate/src/: main.rs
www/: index.html
