[package]
name        = "openshaiya-download"
version     = "0.1.0"
edition     = "2021"
authors     = ["ptr64"]

[[bin]]
name        = "patchdownload"
path        = "src/main.rs"

[dependencies.anyhow]
version     = "1.0"

[dependencies.clap]
version     = "3.2"
features    = ["derive"]

[dependencies.configparser]
version     = "3.0.0"

[dependencies.futures-util]
version     = "0.3.21"

[dependencies.indicatif]
version     = "0.16.0"

[dependencies.reqwest]
version     = "0.11.11"
features    = ["stream"]

[dependencies.strum]
version     = "0.24.1"

[dependencies.strum_macros]
version     = "0.24.2"

[dependencies.tokio]
version     = "1.19"
features    = ["full"]